fixed nav links not showing on homepage

--- a/styles/larger.scss
+++ b/styles/larger.scss
@@ -11,7 +11,7 @@
             max-width: 100rem;
             margin: auto;
 
-            .page-link {
+            .page_link {
                 display: block;
             }
         }
